--- a/.devcontainer/DockerFile
+++ b/.devcontainer/DockerFile
@@ -1,26 +1,34 @@
+# Utilizamos la imagen oficial de PHP con Apache
 FROM php:7.4-apache
 
+# Instalamos herramientas útiles
 RUN apt-get update \
   && apt-get install -y \
     git \
     unzip \
   && rm -rf /var/lib/apt/lists/*
 
+# Establecemos el directorio de trabajo en /workspace
 WORKDIR /workspace
 
+# Utilizamos la imagen oficial de WordPress
 FROM wordpress:6.4.3
+
+# Mantenedor
 LABEL maintainer Automattic <oscar.lopez@automattic.com>
 
+# Configuración de Xdebug
 ENV XDEBUG_PORT 9000
 ENV XDEBUG_IDEKEY docker
 
+# Instalamos Xdebug y lo habilitamos
 RUN pecl install "xdebug" \
     && docker-php-ext-enable xdebug
 
+# Configuración de Xdebug
 RUN echo "xdebug.mode=debug" >> /usr/local/etc/php/conf.d/xdebug.ini && \
     echo "xdebug.start_with_request=yes" >> /usr/local/etc/php/conf.d/xdebug.ini && \
     echo "xdebug.client_host=host.docker.internal" >> /usr/local/etc/php/conf.d/xdebug.ini && \
     echo "xdebug.client_port=${XDEBUG_PORT}" >> /usr/local/etc/php/conf.d/xdebug.ini && \
     echo "xdebug.idekey=${XDEBUG_IDEKEY}" >> /usr/local/etc/php/conf.d/xdebug.ini && \
     echo "xdebug.log=/tmp/xdebug.log" >> /usr/local/etc/php/conf.d/xdebug.ini
-    
